# llm-smart-help

./: .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
scripts/: README.md  forum_data_collection.py  html_to_markdown.py  item_data_collection.py  medal_data_collection.py  qan_forum_data_collection.py
src/: main.py
src/document_parsing/: __init__.py  bullet_list.py  chunk.py  chunker.py  document.py  document_parser.py  image.py  paragraph.py  section.py  table.py
src/embedding/: EmbeddingModel.py  STEmbeding.py
src/models/: __init__.py  agents.py  embedding_model.py  llmodel.py  model.py  os_embedding.py  qna_pipline.py  st_embedding.py
src/models/structured_output/: questions.py  terms.py
src/preprocesing/: chunker.py  html_to_markdown.py  wiki_preprocessing.py
src/preprocesing/document_parsing/: bullet_list.py  document.py  document_loader.py  document_parser.py  section.py  table.py
src/routines/: chunk_generator.py  cli_routine.py  discord_routine.py  embedding_routine.py  generate_answers_routine.py  qa_pipeline.py  server_routine.py
src/structured_output/: terms.py
src/vectordb/: rating_storage.py  term_storage.py  vector.py  vector_storage.py
