[project]
name = "llm-smart-project"
version = "0.1.0"
description = ""
package-mode = false
packages = [{include = "src"}]
authors = [
    {name = "llyfr",email = "k.dreiseitl@seznam.cz"}
]


readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "html2text (>=2024.2.26,<2025.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "tiktoken (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
