[project]
name = "llm-smart-help"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "discord>=2.3.2",
    "markdown-it-py>=3.0.0",
    "numpy>=2.2.5",
    "openai>=1.77.0",
    "pex>=2.36.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
scripts = [
    "markdownify>=1.1.0",
    "requests>=2.32.3",
]

[project.scripts]
main = "src.main:main"